# zephyr-watch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.json  prj.conf
.github/: FUNDING.yml
boards/: esp32.overlay
src/: main.c
src/bluetooth/: bluetooth_infra.c  bluetooth_infra.h  current_time_service.c  current_time_service.h  infrastructure.c  infrastructure.h
src/bluetooth/services/: apple_notification_center_service.c  apple_notification_center_service.h  current_time_service.c  current_time_service.h
src/datetime/: datetime.c  datetime.h
src/devicetwin/: devicetwin.c  devicetwin.h
src/display/: display.c  display.h  utils.c  utils.h
src/display/screens/home/: callbacks.c  home.c  home.h
src/display/styles/: widgetstyle.c  widgetstyle.h
src/timeutils/: timeutils.c  timeutils.h
src/user_interface/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
src/user_interface/components/: ui_comp_hook.c
src/user_interface/screens/: ui_CalenderScreen.c  ui_HomeScreen.c  ui_SettingsScreen.c
src/userinterface/: userinterface.c  userinterface.h  utils.c  utils.h
src/userinterface/screens/blepairing/: blepairing.c  blepairing.h
src/userinterface/screens/home/: callbacks.c  home.c  home.h
src/userinterface/screens/menu/: menu.c  menu.h
src/userinterface/styles/: widgetstyle.c  widgetstyle.h
src/watchdog/: watchdog.c  watchdog.h
